build_release/cowweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cowweb
spec:
  type: NodePort
  ports:
  - port: 8080
  selector:
    app: cowweb
    profile: release
---
apiVersion: v1
kind: Pod
metadata:
  name: cowweb
  labels:
    app: cowweb
    profile: release
spec:
  containers:
  - name: cowweb
    image: docker.io/hhayakaw/cowweb
