build_release/cowweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cowweb
  namespace: cowweb
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /cowsay/.*
        backend:
          serviceName: cowweb
          servicePort: 80
